--- a/webapp/package.json
+++ b/webapp/package.json
@@ -5,27 +5,28 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
-    "@emotion/core": "^10.0.28",
-    "@mdx-js/react": "^1.6.1",
+    "@emotion/core": "^10.0.22",
+    "@mdx-js/react": "^1.5.1",
     "@rebass/preset": "^4.0.5",
-    "gatsby": "^2.21.0",
-    "gatsby-image": "^2.4.0",
-    "gatsby-plugin-manifest": "^2.4.0",
-    "gatsby-plugin-offline": "^3.2.0",
-    "gatsby-plugin-react-helmet": "^3.3.0",
-    "gatsby-plugin-sharp": "^2.6.0",
-    "gatsby-plugin-theme-ui": "^0.3.0",
-    "gatsby-source-filesystem": "^2.3.0",
-    "gatsby-transformer-sharp": "^2.5.0",
+    "@theme-ui/presets": "^0.2.44",
+    "gatsby": "^2.18.8",
+    "gatsby-image": "^2.2.34",
+    "gatsby-plugin-manifest": "^2.2.31",
+    "gatsby-plugin-offline": "^3.0.27",
+    "gatsby-plugin-react-helmet": "^3.1.16",
+    "gatsby-plugin-sharp": "^2.3.5",
+    "gatsby-plugin-theme-ui": "^0.2.43",
+    "gatsby-source-filesystem": "^2.1.40",
+    "gatsby-transformer-sharp": "^2.3.7",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^6.0.0",
+    "react-helmet": "^5.2.1",
     "rebass": "^4.0.7",
-    "theme-ui": "^0.3.1"
+    "theme-ui": "^0.2.49"
   },
   "devDependencies": {
-    "prettier": "2.0.5"
+    "prettier": "^1.19.1"
   },
   "keywords": [
     "gatsby"
