--- a/server/package.json
+++ b/server/package.json
@@ -3,13 +3,19 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "build": "tsc",
+    "deploy": "npm run build && serverless deploy"
+  },
   "dependencies": {
     "@types/aws-lambda": "^8.10.51",
     "@types/aws-sdk": "^2.7.0",
+    "@types/node-fetch": "^2.5.4",
     "apollo-server": "^2.12.0",
     "apollo-server-lambda": "^2.12.0",
     "aws-lambda": "^1.0.6",
     "aws-sdk": "^2.668.0",
-    "graphql": "^15.0.0"
+    "graphql": "^15.0.0",
+    "serverless": "^1.69.0"
   }
 }
