--- a/webapp/package.json
+++ b/webapp/package.json
@@ -17,12 +17,13 @@
     "gatsby-plugin-sharp": "^2.3.5",
     "gatsby-plugin-theme-ui": "^0.2.43",
     "gatsby-source-filesystem": "^2.1.40",
+    "gatsby-source-graphql": "^2.1.28",
     "gatsby-transformer-sharp": "^2.3.7",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
-    "react-use-auth": "^0.6.1",
+    "react-use-auth": "^0.5.3",
     "rebass": "^4.0.7",
     "theme-ui": "^0.2.49"
   },
