--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
         "apollo-server-lambda": "^2.9.13",
         "aws-lambda": "^0.1.2",
         "aws-sdk": "^2.590.0",
-        "graphql": "^14.5.8"
+        "graphql": "^14.5.8",
+        "serverless": "^1.69.0"
     }
 }
